*
* 2.0-M4
*

- Fixed broken WoL functionality
- Fixed broken PING subagent
- IPv6 support in PING subagent


*
* 2.0-M3
*

- IPv6 support: communications, address information, topology
- New NXSL functions: gethostbyaddr, gethostbyname, md5, sha1, AgentReadList
- Added posibility to wakeup unmanaged node
- Instance discovery separated from configuration polls
- Instance discovery type "SNMP Walk - OIDs" sets instance name to OID value by default
- GPIO.PinState parameter in Raspberry Pi subagent
- Server housekeeping process runs once per day at fixed configurable time
- Server housekeeping process performance optimization
- Added driver for Qtech OLT switches
- New agent parameter FileSystem.Type(*)
- New agent parameters Net.Resolver.AddressByName(*) and Net.Resolver.NameByAddress(*)
- Fixed broken SNMP proxy functionality in agent
- Management console:
	- Fixed broken popup menu actions on "Interfaces" tab
	- Macro %USERNAME% can be used in object tools
	- VLAN highlight on port selection in VLAN view
	- "Use multipliers" option in DCI summary tables
	- "Zoom to fit" action in network maps
	- "Always fit layout to screen" option in network maps
	- Last selected zoom level preserved on network map close
	- Invisible dashboards and charts do not refresh itself automatically
	- "Current" column in extended line chart legend
	- Option to clone network maps
- Android console:
    - Implemented feature #776 (WoL)
- Fixed issues: #690, #693, #702, #722, #725, #745, #750, #752, #755, #756, 
                #757, #758, #759, #760, #763, #764, #765, #766, #767, #768,
                #769, #770, #771, #776, #778, #779, #782, #785, #787, #788,
                #789, #790, #792, #793


*
* 2.0-M2
*

- Fixed server hang issue on some Windows versions
- Fixed SNMPv3 communication issue with HP A series switches
- Fixed LDAP sync problems on Windows
- Russian translation improved
- New MIB added: SYMBOL-CC-WS2000-MIB